to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

ctests-V10-00-18 13 October 2014 Luciano Pandola
- Removed AIDA dependency for example-adv-composite_calorimeter-build

ctests-V10-00-17 10 October 2014 Andrea Dotti
- Adding exGPS test for PhysicsChecks

ctests-V10-00-16 07 Oct 2014 Luciano Pandola
- Restore testing of ChargeExchangeMC and CompositeCalorimeter, 
protected to make sure that AIDA and gdml are found.

ctests-V10-00-15 07 Oct 2014 Luciano Pandola
- Temporarily commented out ADD_TEST for ChargeExchangeMC and 
CompositeCalorimeter, having mandatory dependencies on GDML and 
AIDA, respectively.

ctests-V10-00-14 06 Oct 2014 Luciano Pandola
- Registered adv examples brachytherapy, radioprotection, 
 composite_calorimeter-build and ChargeExchangeMC-build

ctests-V10-00-13 02 Oct 2014 Luciano Pandola
- Registered adv examples microdosimetry and dnageometry

ctests-V10-00-12 21 Sept 2014 Andrea Dotti
- Renaming ParFullCMS script test for MIC

ctests-V10-00-11 08 June 2014 Andrea Dotti
- Adding first version of ctest on MIC (Intel Xeon Phi). To 
  enable testing add -DGEANT4_ENABLE_TESTING_MIC=ON See
  tests/ctest/CTests-mic.txt for further details

ctests-V10-00-10 25 June 2014 Gunter Folger
- add G4NEUTRONHP_PRODUCE_FISSION_FRAGMENTS=1 for FissionFragment 
    extended hadronic example 

ctests-V10-00-09 13 June 2014 Gunter Folger
- correct settings for FissionFragment extended hadronic example 

ctests-V10-00-08 12 June 2014 Gunter Folger
- add FissionFragment extended hadronic example 

ctests-V10-00-07 12 June 2014 Gunter Folger
- Update for gdml/g01 and g04: these need datasets, so need 